--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ib-async-explorer</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>MultiStrat-ATS</title>
+    <meta name="description" content="Multi-strategy Automated Trading System (MATS)" />
+    <meta name="author" content="lowQuant" />
 
-    <meta property="og:title" content="ib-async-explorer" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="MultiStrat-ATS" />
+    <meta property="og:description" content="Orchestrate, run, and monitor multiple automated trading strategies concurrently." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/mats-logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@lowQuant" />
+    <meta name="twitter:image" content="/mats-logo.svg" />
   </head>
 
   <body>
